--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
   proxy:
     image: traefik:v2.0
     command:
+      - "--accesslog=true"
       - "--api.dashboard=true"
       - "--api.insecure=true"
       # - "--certificatesresolvers.namesilo.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
@@ -38,11 +39,9 @@ services:
       - "traefik.http.routers.any-http.entrypoints=http"
       - "traefik.http.routers.any-http.rule=HostRegexp(`{any:.*}`)"
       - "traefik.http.routers.any-http.middlewares=https-only"
-      - "traefik.http.routers.any-http.service=api@internal"
       - "traefik.http.routers.proxy.entrypoints=https"
-      - "traefik.http.routers.proxy.rule=Host(`proxy.${DOMAIN:-emaple.com}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+      - "traefik.http.routers.proxy.rule=Host(`proxy.${DOMAIN:-emaple.com}`)"
       - "traefik.http.routers.proxy.middlewares=secured"
-      - "traefik.http.routers.proxy.service=api@internal"
       - "traefik.http.routers.proxy.tls.certresolver=namesilo"
       - "traefik.http.routers.proxy.tls.domains[0].main=${DOMAIN:-emaple.com}"
       - "traefik.http.routers.proxy.tls.domains[0].sans=*.${DOMAIN:-emaple.com}"
@@ -51,6 +50,7 @@ services:
       - "traefik.http.middlewares.known-ips.ipwhitelist.sourceRange=127.0.0.0/8,10.0.0.0/8,192.168.0.0/16,172.16.0.0/16"
       - "traefik.http.middlewares.auth-users.basicauth.realm=Admin"
       - "traefik.http.middlewares.auth-users.basicauth.users=test:$$apr1$$bLaRU9Rq$$n/9/kkrM54oF0Lsai7hYn0"
+      - "traefik.http.services.proxy.loadbalancer.server.port=8080"
     networks:
       - proxy-net
     ports:
