Update to Traefik v2.1

--- a/example-svc/docker-compose.yml
+++ b/example-svc/docker-compose.yml
@@ -16,19 +16,21 @@ services:
       - phpapp
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.webapp.rule=Host(`example.com`)"
-      - "traefik.http.routers.webapp.entrypoints=https"
+      - "traefik.http.routers.webapp.entrypoints=http,https"
+      - "traefik.http.routers.webapp.rule=Host(`app.${DOMAIN:-emaple.com}`)"
+      - "traefik.http.routers.webapp.middlewares=https-only"
+      - "traefik.http.routers.webapp.service=webapp"
+      # - "traefik.http.services.webapp.loadbalancer.server.port=80"
       - "traefik.http.routers.webapp.tls.certresolver=namesilo"
       - "traefik.http.routers.webapp.tls.domains[0].main=emaple.com}"
       - "traefik.http.routers.webapp.tls.domains[0].sans=*.emaple.com}"
-      - "traefik.http.services.webapp.loadbalancer.server.port=80"
     networks:
       - app-network
       - pri-network
     restart: unless-stopped
     volumes:
       - .:/var/www/html
-      - ./vhost.conf:/etc/nginx/conf.d/default.conf
+      - ./vhost.conf:/etc/nginx/conf.d/default.conf:ro
 
   ### App service ###
   phpapp:
