--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,22 +13,26 @@ volumes:
 
 services:
   proxy:
-    image: traefik:v2.0
+    image: traefik:v2.1
     command:
+      - "--entrypoints.http.address=:80"
+      - "--entrypoints.https.address=:443"
       - "--accesslog=true"
+      - "--log.level=INFO"
       - "--api.dashboard=true"
-      - "--api.insecure=true"
+      - "--api.debug=false"
       # - "--certificatesresolvers.namesilo.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
       - "--certificatesresolvers.namesilo.acme.dnschallenge=true"
       - "--certificatesresolvers.namesilo.acme.dnschallenge.provider=namesilo"
       - "--certificatesresolvers.namesilo.acme.email=admin@${DOMAIN:-emaple.com}"
       - "--certificatesresolvers.namesilo.acme.storage=/letsencrypt/acme.json"
-      - "--entrypoints.http.address=:80"
-      - "--entrypoints.https.address=:443"
-      - "--entrypoints.traefik.address=:8080"
-      # - "--log.level=DEBUG"
+      - "--certificatesResolvers.namesilo.acme.keyType=RSA4096"
+      - "--ping=true"
+      - "--ping.manualrouting=true"
       - "--metrics.prometheus=true"
-      - "--metrics.prometheus.entryPoint=traefik"
+      - "--metrics.prometheus.addEntryPointsLabels=true"
+      - "--metrics.prometheus.addServicesLabels=true"
+      - "--metrics.prometheus.manualrouting=true"
       - "--providers.docker=true"
       - "--providers.docker.network=reverse-proxy"
       - "--providers.docker.exposedbydefault=false"
@@ -36,21 +40,29 @@ services:
       NAMESILO_API_KEY_FILE: /run/secrets/namesilo_api_key
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.any-http.entrypoints=http"
-      - "traefik.http.routers.any-http.rule=HostRegexp(`{any:.*}`)"
-      - "traefik.http.routers.any-http.middlewares=https-only"
-      - "traefik.http.routers.proxy.entrypoints=https"
-      - "traefik.http.routers.proxy.rule=Host(`proxy.${DOMAIN:-emaple.com}`)"
-      - "traefik.http.routers.proxy.middlewares=secured"
-      - "traefik.http.routers.proxy.tls.certresolver=namesilo"
-      - "traefik.http.routers.proxy.tls.domains[0].main=${DOMAIN:-emaple.com}"
-      - "traefik.http.routers.proxy.tls.domains[0].sans=*.${DOMAIN:-emaple.com}"
       - "traefik.http.middlewares.secured.chain.middlewares=known-ips,auth-users"
       - "traefik.http.middlewares.https-only.redirectscheme.scheme=https"
       - "traefik.http.middlewares.known-ips.ipwhitelist.sourceRange=127.0.0.0/8,10.0.0.0/8,192.168.0.0/16,172.16.0.0/16"
       - "traefik.http.middlewares.auth-users.basicauth.realm=Admin"
       - "traefik.http.middlewares.auth-users.basicauth.users=test:$$apr1$$bLaRU9Rq$$n/9/kkrM54oF0Lsai7hYn0"
-      - "traefik.http.services.proxy.loadbalancer.server.port=8080"
+      - "traefik.http.routers.any-http.entrypoints=http"
+      - "traefik.http.routers.any-http.rule=HostRegexp(`{any:.*}`)"
+      - "traefik.http.routers.any-http.middlewares=https-only"
+      - "traefik.http.routers.proxy.entrypoints=https"
+      - "traefik.http.routers.proxy.rule=Host(`proxy.${DOMAIN:-emaple.com}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+      - "traefik.http.routers.proxy.middlewares=secured"
+      - "traefik.http.routers.proxy.service=api@internal"
+      - "traefik.http.routers.proxy.tls.certresolver=namesilo"
+      - "traefik.http.routers.proxy.tls.domains[0].main=${DOMAIN:-emaple.com}"
+      - "traefik.http.routers.proxy.tls.domains[0].sans=*.${DOMAIN:-emaple.com}"
+      - "traefik.http.routers.ping.entrypoints=http"
+      - "traefik.http.routers.ping.rule=Host(`proxy.${DOMAIN:-emaple.com}`) && PathPrefix(`/ping`)"
+      - "traefik.http.routers.ping.middlewares=secured"
+      - "traefik.http.routers.ping.service=ping@internal"
+      - "traefik.http.routers.metrics.entrypoints=http"
+      - "traefik.http.routers.metrics.rule=Host(`proxy.${DOMAIN:-emaple.com}`) && PathPrefix(`/metrics`)"
+      - "traefik.http.routers.metrics.middlewares=secured"
+      - "traefik.http.routers.metrics.service=prometheus@internal"
     networks:
       - proxy-net
     ports:
@@ -60,4 +72,4 @@ services:
       - namesilo_api_key
     volumes:
       - letsencrypt:/letsencrypt
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock:ro
